@@ -2,6 +2,7 @@ package fairytale.tbd.global.config;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,6 +18,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.logout.LogoutFilter;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -62,13 +64,16 @@ public class SecurityConfig {
 			// CORS
 			.cors(corsCustomizer -> corsCustomizer.configurationSource(request -> {
 				CorsConfiguration config = new CorsConfiguration();
-				config.setAllowedOrigins(Collections.singletonList("*"));
-				config.setAllowedMethods(Collections.singletonList("*"));
+				config.setAllowedOrigins(List.of("*");
+				config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
 				config.setAllowCredentials(true);
-				config.setAllowedHeaders(Collections.singletonList("*"));
-				config.setExposedHeaders(Arrays.asList("Authorization"));
+				config.setAllowedHeaders(List.of("*"));
+				config.setExposedHeaders(Arrays.asList("Authorization", "Authorization-refresh"));
 				config.setMaxAge(3600L);
-				return config;
+
+				UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+				source.registerCorsConfiguration("/**", config);
+				return source;
 			}));
 		http.addFilterAfter(customUsernamePwdAuthenticationFilter(), LogoutFilter.class);
 		http.addFilterBefore(jwtAuthenticationFilter(), CustomUsernamePwdAuthenticationFilter.class);
